syntax = "proto3";

package identity.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 成员关联
message Membership {
  // 成员状态
  enum Status {
    DISABLED = 0;   // 已停用 (管理员手动封禁该成员在该租户的权限（例如离职、停职调查）。)
    ACTIVE = 1;     // 生效中 (成员在该租户下权限正常，可正常切换/进入。)
    PENDING = 2;    // 待审核 (用户申请加入租户，或被管理员添加但尚未通过审核。)
    INVITED = 3;    // 待接受 (租户发出了邀请，但用户尚未在个人中心点击接受。)
    EXPIRED = 4;    // 已过期 (成员在当前租户的任期到期（常用于外包人员、临时项目组成员）。)
    REJECTED = 5;   // 已拒绝 (加入申请被租户管理员拒绝，或用户拒绝了邀请。)
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = { description: "ID" }
  ]; // ID

  optional uint32 user_id = 2 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = { description: "用户ID" }
  ]; // 用户ID

  optional uint32 tenant_id = 3 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = { description: "租户ID" }
  ]; // 租户ID

  optional bool is_primary = 4 [
    json_name = "isPrimary",
    (gnostic.openapi.v3.property) = {description: "是否主身份"}
  ]; // 是否主身份

  optional Status status = 5 [
    (gnostic.openapi.v3.property) = {description: "状态"}
  ]; // 状态

  optional google.protobuf.Timestamp assigned_at = 6 [
    json_name = "assignedAt",
    (gnostic.openapi.v3.property) = { description: "分配时间（UTC）" }
  ];// 分配时间（UTC）
  optional uint32 assigned_by = 7 [
    json_name = "assignedBy",
    (gnostic.openapi.v3.property) = { description: "分配者用户 ID" }
  ];

  optional google.protobuf.Timestamp joined_at = 8 [
    json_name = "joinedAt",
    (gnostic.openapi.v3.property) = { description: "加入时间（UTC）" }
  ];// 加入时间（UTC）

  optional google.protobuf.Timestamp start_at = 9 [
    json_name = "startAt",
    (gnostic.openapi.v3.property) = {description: "生效时间"}
  ];// 生效时间

  optional google.protobuf.Timestamp end_at = 10 [
    json_name = "endAt",
    (gnostic.openapi.v3.property) = {description: "失效时间"}
  ];// 失效时间


  optional uint32 role_id = 20 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = { description: "角色ID" }
  ]; // 角色ID
  repeated uint32 role_ids = 21 [
    json_name = "roleIds",
    (gnostic.openapi.v3.property) = { description: "角色ID" }
  ]; // 角色ID

  optional uint32 position_id = 22 [
    json_name = "positionId",
    (gnostic.openapi.v3.property) = { description: "岗位ID" }
  ]; // 岗位ID
  repeated uint32 position_ids = 23 [
    json_name = "positionIds",
    (gnostic.openapi.v3.property) = { description: "岗位ID" }
  ]; // 岗位ID

  optional uint32 org_unit_id = 24 [
    json_name = "orgUnitId",
    (gnostic.openapi.v3.property) = { description: "组织ID" }
  ]; // 组织ID
  repeated uint32 org_unit_ids = 25 [
    json_name = "orgUnitIds",
    (gnostic.openapi.v3.property) = { description: "组织ID" }
  ]; // 组织ID

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}
